--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.backend
-    command: uvicorn app.main:app --host '0.0.0.0' --port 8000
+    # command: uvicorn app.main:app --host '0.0.0.0' --port 8000 # Production
+    command: uvicorn app.main:app --host '0.0.0.0' --port 8000 --reload # Development
     volumes:
       - ./backend:/backend
     depends_on:
