--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,15 @@ services:
     container_name: postgres
     image: postgres:11
     volumes:
-      - ./tmp/db:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_HOST_AUTH_METHOD: trust
+      - POSTGRES_HOST_AUTH_METHOD=trust # Development
+      # - POSTGRES_HOST_AUTH_METHOD=scram-sha-256 # Production
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    ports:
+      - "5432:5432"
 
   backend:
     container_name: backend
@@ -21,6 +27,10 @@ services:
       - db
     ports:
       - "8000:8000"
+    environment:
+      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      HOST: ${HOST}
+      PORT: 8000
 
   frontend:
     container_name: frontend
@@ -36,3 +46,7 @@ services:
       - "9999:9999"
     depends_on:
       - backend
+
+# Declaration of the named volume
+volumes:
+  db_data:
