--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,21 @@ services:
   db:
     container_name: postgres
     image: postgres:11
+    restart: always
     volumes:
       - db_data:/var/lib/postgresql/data
+      - ${HOME}/.postgresql/server.crt:/var/lib/postgresql/server.crt
+      - ${HOME}/.postgresql/server.key:/var/lib/postgresql/server.key
     environment:
-      - POSTGRES_HOST_AUTH_METHOD=trust # Development
-      # - POSTGRES_HOST_AUTH_METHOD=scram-sha-256 # Production
+      # - POSTGRES_HOST_AUTH_METHOD=trust # Development
+      - POSTGRES_HOST_AUTH_METHOD=scram-sha-256 # Production
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - "5432:5432"
+    # For the authentication method
+    command: -c ssl=on -c ssl_cert_file=/var/lib/postgresql/server.crt -c ssl_key_file=/var/lib/postgresql/server.key -c password_encryption=scram-sha-256
 
   backend:
     container_name: backend
