--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ sqlalchemy = "*"
 psycopg2-binary = "*"
 
 [dev-packages]
+pytest-asyncio = "*"
+httpx = "*"
 
 [requires]
 python_version = "3.10"
