--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pydantic = {extras = ["email"], version = "*"}
 python-multipart = "*"
 sqlalchemy = "*"
 psycopg2-binary = "*"
+bcrypt = "*"
 
 [dev-packages]
 pytest-asyncio = "*"
