feat: integrate db migration as part of Docker and docker-compose setup

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -25,4 +25,5 @@ ENV MODULE_NAME="app.main"
 ENV PORT=8000
 
 # Specify the command to run your app
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run Alembic migrations before starting the server
+CMD alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000
