test: Add db for testing and pytest-env for it

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -3,3 +3,6 @@ markers =
     unit: marks tests as unit (deselect with '-m "not unit"')
     integration: marks tests as integration (deselect with '-m "not integration"')
 addopts = -sv
+env =
+    # Use pytest-env to set testing database url during test execution
+    DATABASE_URL=postgresql://postgres_user:test_password@localhost:5433/postgres
