--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ psycopg2-binary = "*"
 bcrypt = "*"
 pytest-asyncio = "*"
 alembic = "*"
+pytest-env = "*"
 
 [dev-packages]
 pytest-asyncio = "*"
@@ -20,6 +21,7 @@ httpx = "*"
 requests = "*"
 pytest-mock = "*"
 pytest = "*"
+pytest-env = "*"
 
 [requires]
 python_version = "3.10"
