--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,22 @@ services:
     ports:
       - "5432:5432"
 
+  db_test:
+    container_name: postgres_test
+    image: postgres:11
+    environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust # for testing
+      - POSTGRES_USER=postgres_user
+      - POSTGRES_PASSWORD=test_password
+      - POSTGRES_DB=postgres
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres_user -d postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    ports:
+      - "5433:5432"  # Different host port to avoid conflict
+
   backend:
     container_name: backend
     build:
